po: update po/sr_RS@latin/member.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/member.po
+++ b/po/sr_RS@latin/member.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-07 15:25+0000\n"
+"PO-Revision-Date: 2017-02-08 11:02+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -944,7 +944,7 @@ msgstr "(ILI članstvo ukoliko je mod ažuriranja u pitanju)"
 
 #: CRM/Member/Import/Form/MapField.php
 msgid "Duplicate Import Membership Mapping Name"
-msgstr ""
+msgstr "Duplikat imena za mapiranje članstva"
 
 #: CRM/Member/Import/Parser.php
 msgid "View Membership URL"
@@ -1679,19 +1679,19 @@ msgstr ""
 msgid ""
 "You cannot modify relationship type because there are membership records "
 "associated with this membership type."
-msgstr ""
+msgstr "Ne možete modifikovati tip veze zato što već postoje zapisi o članstvu povezani sa ovim tipom članstva."
 
 #: templates/CRM/Member/Form/MembershipType.tpl
 msgid ""
 "Memberships can be automatically granted to related contacts by selecting a "
 "Relationship Type."
-msgstr ""
+msgstr "Članstvo se može automatski dodeliti povezanim kontaktima biranjem tipa veze."
 
 #: templates/CRM/Member/Form/MembershipType.tpl
 msgid ""
 "Is this membership type available for self-service signups ('Public') or "
 "assigned by CiviCRM 'staff' users only ('Admin')"
-msgstr ""
+msgstr "Da li je ovaj tip članstva dostupan korisnicima koji se sami registruju ('Javni') ili može biti dodeljen samo od strane CiviCRM 'osoblja' - korisnika ('Admin')"
 
 #: templates/CRM/Member/Form/MembershipType.tpl
 msgid "Renewal Reminders"
@@ -1714,11 +1714,11 @@ msgstr "Po vezi"
 
 #: templates/CRM/Member/Form/MembershipView.tpl
 msgid "View primary member contact summary"
-msgstr ""
+msgstr "Vidi kratak pregled kontakta primarnog člana"
 
 #: templates/CRM/Member/Form/Search/EmptyResults.tpl
 msgid "if you are searching by member name, check your spelling"
-msgstr ""
+msgstr "Ako pretražujete po imenu člana, proverite vaš unos"
 
 #: templates/CRM/Member/Form/Search.hlp
 msgid "Primary Members"
@@ -1752,7 +1752,7 @@ msgstr "Vidi zapis o primarnom članu"
 
 #: templates/CRM/Member/Form/Selector.tpl templates/CRM/Member/Page/Tab.tpl
 msgid "View Primary"
-msgstr ""
+msgstr "Vidi primarni kontakt"
 
 #: templates/CRM/Member/Form/Selector.tpl
 msgid "View all memberships for this contact"
@@ -1803,14 +1803,14 @@ msgstr ""
 
 #: templates/CRM/Member/Import/Form/DataSource.hlp
 msgid "Matching Memberships to Contacts"
-msgstr ""
+msgstr "Poklapanje članstava sa kontaktima"
 
 #: templates/CRM/Member/Import/Form/DataSource.hlp
 msgid ""
 "Membership import files must contain data needed to <strong>match the "
 "membership to the contact record</strong>. This 'matching' can be handled in"
 " several different ways:"
-msgstr ""
+msgstr "Fajlovi za import članstava moraju imati podatke potrebne za <strong>poređenje članstava sa zapisom o kontaktima</strong>. Ovo 'slaganje' se može rešiti na više različitih načina:"
 
 #: templates/CRM/Member/Import/Form/DataSource.hlp
 msgid ""
@@ -1818,21 +1818,21 @@ msgid ""
 "contact in CiviCRM, you can include that value as a column in your import "
 "file. Memberships will then be matched to contact records using their "
 "External ID."
-msgstr ""
+msgstr "Ukoliko ste koristili jedinstveni <strong>Eksterni identifikator</strong> za svaki kontakt u CiviCRMu, možete uključiti tu vrednost kao kolonu u vašem fajlu za import. Članstva će se onda poklapati sa zapisima o kontaktima koristeći ovaj eksterni ID."
 
 #: templates/CRM/Member/Import/Form/DataSource.hlp
 msgid ""
 "Save the CSV file with your membership data and 'contact matching' data to "
 "your local hard drive (or an accessible drive on your network) - and you are"
 " now ready for step 1 (Upload Data)."
-msgstr ""
+msgstr "Sačuvajte CSV fajl sa podacima o članovima i podatke za 'poređenje kontakta' na vaš hard disk (ili neku lokaciju na vašoj mreži) - i spremni ste za 1. korak (Postavljanje podataka)."
 
 #: templates/CRM/Member/Import/Form/DataSource.hlp
 msgid ""
 "For each import, you can either INSERT new membership records, or UPDATE "
 "existing records. You can not do both types of operations in a single import"
 " session."
-msgstr ""
+msgstr "Za svaki import, možete uneti nove zapise o članstvu, ili ažurirati postojeće zapise. Ne možete uraditi obe operacije tokom jednog importa."
 
 #: templates/CRM/Member/Import/Form/DataSource.hlp
 msgid ""
@@ -1849,7 +1849,7 @@ msgid ""
 "If you are UPDATING existing memberships, you will need to include a column "
 "containing the unique CiviCRM-assigned membership ID to match to the "
 "existing membership records."
-msgstr ""
+msgstr "Ukoliko ažurirate postojeće učesnike, neophodno je da uključite kolonu koja sadrži jedinstveni ID članstva koji dodeljuje CiviCRM koji se slaže sa postojećim zapisom o članstvu."
 
 #: templates/CRM/Member/Import/Form/DataSource.tpl
 msgid ""
@@ -1862,24 +1862,24 @@ msgid ""
 "Files to be imported must be in the 'comma-separated-values' format (CSV) "
 "and must contain data needed to match the membership data to an existing "
 "contact in your CiviCRM database."
-msgstr ""
+msgstr "Fajlovi za import moraju biti u CSV ('comma-separated-values') formatu i moraju sadržati potrebne podatke za poređenje podataka o članstvu sa postojećim zapisima o kontaktima u vašoj CiviCRM bazi podataka."
 
 #: templates/CRM/Member/Import/Form/DataSource.tpl
 msgid ""
 "Select 'Individual' if you are importing memberships for individual persons."
-msgstr ""
+msgstr "Odaberite 'Pojedinac' ukoliko importujete podatke o članstvu za pojedince."
 
 #: templates/CRM/Member/Import/Form/DataSource.tpl
 msgid ""
 "Select 'Organization' or 'Household' if you are importing memberships made "
 "by contacts of that type. (NOTE: Some built-in contact types may not be "
 "enabled for your site.)"
-msgstr ""
+msgstr "Odaberite 'Organizacija' ili 'Domaćinstvo' ukoliko importujete podatke o članstvu za kontakte ovog tipa. (Beleška: Neki od ugrađenih tipova kontakata možda nisu aktivirani za vaš sajt.)"
 
 #: templates/CRM/Member/Import/Form/DataSource.tpl
 msgid ""
 "If you want to use a previously saved import field mapping - select it here."
-msgstr ""
+msgstr "Ukoliko želite da koristite već sačuvano mapiranje polja za import - izaberite ga ovde."
 
 #: templates/CRM/Member/Import/Form/Preview.tpl
 #: templates/CRM/Member/Import/Form/Summary.tpl
@@ -1893,15 +1893,15 @@ msgid ""
 msgid_plural ""
 "CiviCRM has detected mismatched membership IDs. These records have not been "
 "Updated."
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "CiviCRM je pronašao ID članstva koji se ne slaže. Ovaj zapis neće biti ažuriran."
+msgstr[1] "CiviCRM je pronašao ID članstava koji se ne slažu. Ovi zapisi neće biti ažurirani."
+msgstr[2] "CiviCRM je pronašao ID članstava koji se ne slažu. Ovi zapisi neće biti ažurirani."
 
 #: templates/CRM/Member/Import/Form/Summary.tpl
 msgid ""
 "You can <a href='%1'>Download Mismatched Memberships</a>. You may then "
 "correct them, and import the new file with the corrected data."
-msgstr ""
+msgstr "Možete <a href=\"%1\">Preuzeti zapise članstava koji se ne slažu</a>. Kada ih ispravite, importujte novi fajl sa ispravljenim podacima."
 
 #: templates/CRM/Member/Import/Form/Summary.tpl
 msgid ""
@@ -1929,15 +1929,15 @@ msgstr[2] ""
 
 #: templates/CRM/Member/Import/Form/Summary.tpl
 msgid "Rows with mismatched membership IDs... (NOT updated)."
-msgstr ""
+msgstr "Redovi sa konfliktnim ID brojevima članstava... (NISU ažurirani)."
 
 #: templates/CRM/Member/Import/Form/Summary.tpl
 msgid "Download Mismatched Memberships"
-msgstr ""
+msgstr "Preuzmi članstva koja se ne slažu sa zapisom"
 
 #: templates/CRM/Member/Import/Form/Summary.tpl
 msgid "Rows which are duplicates of existing CiviCRM membership records."
-msgstr ""
+msgstr "Redovi koji su duplikati postojećih zapisa članstava u CiviCRMu."
 
 #: templates/CRM/Member/Page/DashBoard.hlp
 msgid "Member Dashboard"
@@ -1972,7 +1972,7 @@ msgstr ""
 
 #: templates/CRM/Member/Page/DashBoard.hlp
 msgid "Refer to the online user guide for more information."
-msgstr ""
+msgstr "Pogledajte onlajn dokumentaciju za više informacija."
 
 #: templates/CRM/Member/Page/DashBoard.tpl
 msgid "Membership Summary"
@@ -2008,7 +2008,7 @@ msgstr "Članovi od %1 %2"
 
 #: templates/CRM/Member/Page/DashBoard.tpl
 msgid "Totals (all types)"
-msgstr ""
+msgstr "Ukupno (svi tipovi)"
 
 #: templates/CRM/Member/Page/DashBoard.tpl
 msgid ""
@@ -2052,11 +2052,11 @@ msgstr ""
 msgid ""
 "Use this field to configure Membership Types where memberships are "
 "automatically granted to related contacts. Examples:"
-msgstr ""
+msgstr "U ovom polju možete podesiti tipove članstva gde su članovi automatski dodeljeni povezanim kontaktima. Primeri:"
 
 #: templates/CRM/Member/Page/MembershipType.hlp
 msgid "Direct member is:"
-msgstr ""
+msgstr "Direktan član je:"
 
 #: templates/CRM/Member/Page/MembershipType.hlp
 msgid "Membership is automatically granted to:"
@@ -2139,7 +2139,7 @@ msgstr ""
 msgid ""
 "Configure membership renewal reminders using <a href=\"%1\">Schedule "
 "Reminders</a>."
-msgstr ""
+msgstr "Podesite podsetnike za obnovu članstva koristeći <a href=\"%1\">Zakaži podestnike</a>."
 
 #: templates/CRM/Member/Page/MembershipType.tpl
 #: templates/CRM/Member/Page/Tab.tpl
@@ -2219,7 +2219,7 @@ msgstr "Trenutna i neaktivna članstva za %1 su izlistana ispod."
 
 #: templates/CRM/Member/Page/Tab.tpl
 msgid "Submit Credit Card Membership"
-msgstr ""
+msgstr "Pošalji registraciju za članstvo kreditnom karticom"
 
 #: templates/CRM/Member/Page/Tab.tpl
 msgid "No memberships have been recorded for this contact."
@@ -2450,7 +2450,7 @@ msgstr ""
 
 #: templates/CRM/Member/Form/Search.hlp
 msgid "Select neither to show all memberships"
-msgstr ""
+msgstr "Ukoliko ne izaberete ništa, biće prikazana sva članstva"
 
 #: templates/CRM/Member/Form/Search.hlp
 msgid "Auto-Renew Subscription Status"
@@ -2466,26 +2466,26 @@ msgstr ""
 msgid ""
 "Select \"In Progress\" to display memberships with current auto-renew "
 "subscriptions."
-msgstr ""
+msgstr "Izaberite \"U toku\" da prikažete članstva sa trenutno aktivnim automatskim objavljanjem pretplate."
 
 #: templates/CRM/Member/Form/Search.hlp
 msgid "Select \"Failed\" to display memberships with failed subscription payment."
-msgstr ""
+msgstr "Izaberite \"Neuspelo\" da prikažete članstva sa neuspelim plaćanjem članarine."
 
 #: templates/CRM/Member/Form/Search.hlp
 msgid ""
 "Select \"Cancelled\" to display memberships with cancelled auto-renew "
 "subscriptions."
-msgstr ""
+msgstr "Izaberite \"Otkazano\" da prikažete članstva gde je automatska obnova članstva otkazana."
 
 #: templates/CRM/Member/Form/Search.hlp
 msgid ""
 "Select \"Ended\" to display memberships with an ended auto-renew "
 "subscription."
-msgstr ""
+msgstr "Izaberite \"Završeno\" da prikažete članstva sa završenim automatskim objavljanjem pretplate."
 
 #: templates/CRM/Member/Form/Search.hlp
 msgid ""
 "Select \"Any\" to display memberships with auto-renew subscription "
 "irrespective of their status."
-msgstr ""
+msgstr "Izaberite \"Bilo koji\" da prikažete članstva sa automatskim objavljanjem pretplate bez obzira na status."
