--- a/po/it_IT/common-base.po
+++ b/po/it_IT/common-base.po
@@ -4,6 +4,7 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Alessio <alessio@dba.it>, 2012
+# Angela Iussig <angela.iussig@gmail.com>, 2017
 # Antonio de Simone <antonio.benson@gmail.com>, 2012
 # dpedercini <dpedercini@libero.it>, 2013-2014
 # Fortarrigo Piccolomini <info@sinergicamente.eu>, 2014
@@ -23,8 +24,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-09 22:43+0000\n"
-"Last-Translator: Francesco Garganese <francesco.garganese@aeromnia.aero>\n"
+"PO-Revision-Date: 2017-02-08 16:23+0000\n"
+"Last-Translator: Angela Iussig <angela.iussig@gmail.com>\n"
 "Language-Team: Italian (http://www.transifex.com/civicrm/civicrm/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -6403,7 +6404,7 @@ msgid ""
 "submission. We have returned you to the initial step so you can complete and"
 " resubmit the form. If you experience continued difficulties, please contact"
 " us for assistance."
-msgstr ""
+msgstr "La tua sessione browser è scaduta e non siamo in grado di completare l'invio dei dati. Sei tornato alla prima parte del modulo, affinché tu possa inserire i dati ed inviarli correttamente. Se dovessi riscontrare ulteriori difficoltà, non esitare a contattarci."
 
 #: CRM/Core/DAO/ActionLog.php
 msgid "Action Date Time"
@@ -18703,7 +18704,7 @@ msgstr "Quota totale(i)"
 
 #: templates/CRM/Price/Form/Calculate.tpl
 msgid "for this participant"
-msgstr "per questo partecipante"
+msgstr " per questo partecipante"
 
 #: templates/CRM/Price/Form/DeleteField.tpl
 msgid ""
@@ -22894,7 +22895,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Registered"
-msgstr ""
+msgstr "Iscritto"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Attended"
@@ -26948,7 +26949,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Pending (pay later)"
-msgstr ""
+msgstr "In attesa di pagamento (paga successivamente)"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Pending (incomplete transaction)"
