--- a/po/it_IT/event.po
+++ b/po/it_IT/event.po
@@ -4,6 +4,7 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Alfredo Lucci <alfredolucci.al@gmail.com>, 2015
+# Angela Iussig <angela.iussig@gmail.com>, 2017
 # Flavio Grassi <flavio.g.grassi@gmail.com>, 2016
 # Francesco Moretto <francesco@moretto.it>, 2015
 # Johan Soderkvist <johansoderkvist@ikreativo.it>, 2016
@@ -16,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-02-08 15:53+0000\n"
+"Last-Translator: Angela Iussig <angela.iussig@gmail.com>\n"
 "Language-Team: Italian (http://www.transifex.com/civicrm/civicrm/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -495,7 +496,7 @@ msgstr "Descrizione completa"
 
 #: CRM/Event/Form/ManageEvent/EventInfo.php
 msgid "Include Map to Event Location"
-msgstr ""
+msgstr "Includi Mappa nella pagina dell'evento"
 
 #: CRM/Event/Form/ManageEvent/EventInfo.php
 msgid "End Date / Time"
@@ -1030,7 +1031,7 @@ msgstr "Tornare alla pagina di registrazione principale per completare le inform
 
 #: CRM/Event/Form/Registration/AdditionalParticipant.php
 msgid "Skip Participant"
-msgstr "Salta Partecipante"
+msgstr "Salta partecipante >>|"
 
 #: CRM/Event/Form/Registration/AdditionalParticipant.php
 msgid "A person is already registered for this event."
@@ -1199,7 +1200,7 @@ msgstr "Le E-mail sono state inviate a: %1"
 
 #: CRM/Event/Form/Registration/Register.php
 msgid "How many people are you registering?"
-msgstr "Quante persone stai registrando?"
+msgstr "Quante persone stai iscrivendo?"
 
 #: CRM/Event/Form/Registration/Register.php
 msgid ""
@@ -1678,7 +1679,7 @@ msgstr ""
 #: templates/CRM/Event/Cart/Form/Checkout/Payment.tpl
 #: templates/CRM/Event/Cart/Form/Checkout/ThankYou.tpl
 msgid "Waitlisted:"
-msgstr ""
+msgstr "In lista d'attesa"
 
 #: templates/CRM/Event/Cart/Form/Checkout/Payment.tpl
 msgid "Subtotal:"
@@ -2771,7 +2772,7 @@ msgstr "La pagina è in esecuzione in <strong>modalità di test</strong>.Se ques
 
 #: templates/CRM/Event/Form/Registration/Register.tpl
 msgid "including yourself"
-msgstr "incluso l'utente"
+msgstr "incluso chi sta compilando"
 
 #: templates/CRM/Event/Form/Registration/Register.tpl
 msgid ""
@@ -3699,7 +3700,7 @@ msgid ""
 "It looks like you are already registered for this event. If you want to "
 "change your registration, or you feel that you've received this message in "
 "error, please contact the site administrator."
-msgstr ""
+msgstr "Sembra che tu sia già iscritto a questo evento. Se vuoi modificare la tua iscrizione o pensi di aver ricevuto questo messaggio per errore, per favore contattaci."
 
 #: CRM/Event/Form/Registration/Register.php
 msgid ""
@@ -3925,25 +3926,25 @@ msgstr ""
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 #: xml/templates/message_templates/event_online_receipt_text.tpl
 msgid "Thank you for your participation."
-msgstr ""
+msgstr "Grazie per la tua iscrizione."
 
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 msgid ""
 "This letter is a confirmation that your registration has been received and "
 "your status has been updated to <strong> %1</strong>."
-msgstr ""
+msgstr "Questa email è la conferma dell'avvenuta iscrizione e il tuo status è stato impostato come  <strong> %1</strong>."
 
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 msgid ""
 "This letter is a confirmation that your registration has been received and "
 "your status has been updated to <strong>waitlisted</strong>."
-msgstr ""
+msgstr "Questa email è la conferma dell'avvenuta iscrizione e il tuo status è stato impostato come  <strong> waitlisted</strong>."
 
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 msgid ""
 "This letter is a confirmation that your registration has been received and "
 "your status has been updated to <strong>registered<strong>."
-msgstr ""
+msgstr "Questa email è la conferma dell'avvenuta iscrizione e il tuo status è stato impostato come  <strong> registered</strong>."
 
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 #: xml/templates/message_templates/event_online_receipt_text.tpl
@@ -3970,19 +3971,19 @@ msgstr ""
 msgid ""
 "This letter is a confirmation that your registration has been received and "
 "your status has been updated to %1."
-msgstr ""
+msgstr "Questa email è la conferma dell'avvenuta iscrizione e il tuo status è stato impostato come  %1."
 
 #: xml/templates/message_templates/event_online_receipt_text.tpl
 msgid ""
 "This letter is a confirmation that your registration has been received and "
 "your status has been updated to waitlisted."
-msgstr ""
+msgstr "Questa email è la conferma dell'avvenuta iscrizione e il tuo status è stato impostato come  waitlisted."
 
 #: xml/templates/message_templates/event_online_receipt_text.tpl
 msgid ""
 "This letter is a confirmation that your registration has been received and "
 "your status has been updated to registered."
-msgstr ""
+msgstr "Questa email è la conferma dell'avvenuta iscrizione e il tuo status è stato impostato come registered."
 
 #: xml/templates/message_templates/event_online_receipt_text.tpl
 #: xml/templates/message_templates/participant_confirm_text.tpl
