po: update po/sr_RS@latin/contribute.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/contribute.po
+++ b/po/sr_RS@latin/contribute.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-06 12:11+0000\n"
+"PO-Revision-Date: 2017-02-09 16:25+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -764,7 +764,7 @@ msgstr "Iznos uplate ne može biti veći nego iznos duga"
 
 #: CRM/Contribute/Form/AdditionalPayment.php
 msgid "Refund amount must equal refund due amount."
-msgstr ""
+msgstr "Iznos za refundiranje mora biti jednak dugovanom iznosu."
 
 #: CRM/Contribute/Form/AdditionalPayment.php
 msgid ""
@@ -1089,7 +1089,7 @@ msgstr "Zapis o donaciji je sačuvan."
 
 #: CRM/Contribute/Form/Contribution.php
 msgid "Office Credit Card contribution"
-msgstr ""
+msgstr "Donacija kreditnom karticom kancelarije"
 
 #: CRM/Contribute/Form/Contribution.php
 msgid "Payment Processor Error"
@@ -1139,11 +1139,11 @@ msgstr "Stil grafikona"
 
 #: CRM/Contribute/Form/ContributionCharts.php
 msgid "Bar"
-msgstr ""
+msgstr "Kružni grafikon"
 
 #: CRM/Contribute/Form/ContributionCharts.php
 msgid "Pie"
-msgstr ""
+msgstr "Trakasti grafikon"
 
 #: CRM/Contribute/Form/ContributionCharts.php
 msgid "Select Year (for monthly breakdown)"
@@ -2152,11 +2152,11 @@ msgstr "Produkcijska stranica"
 #: CRM/Contribute/Page/ContributionPage.php
 #: templates/CRM/Contribute/Page/DashBoard.tpl
 msgid "Current Month-To-Date"
-msgstr ""
+msgstr "Ovog meseca do danas"
 
 #: CRM/Contribute/Page/ContributionPage.php
 msgid "Fiscal Year-To-Date"
-msgstr ""
+msgstr "Fiskalna godina do dana"
 
 #: CRM/Contribute/Page/ContributionPage.php
 #: templates/CRM/Contribute/Page/DashBoard.tpl
@@ -2195,7 +2195,7 @@ msgstr "Donacija %%StatusMessage%%"
 
 #: CRM/Contribute/Page/DashBoard.php
 msgid "Contributions Charts"
-msgstr ""
+msgstr "Grafikoni donacija"
 
 #: CRM/Contribute/Page/ManagePremiums.php CRM/Contribute/Page/Premium.php
 msgid "Edit Premium"
@@ -2250,7 +2250,7 @@ msgstr "Eksport donacija"
 
 #: CRM/Contribute/Task.php
 msgid "Update Pending Contribution Status"
-msgstr ""
+msgstr "Ažuriraj status donacije na čekanju"
 
 #: CRM/Contribute/Task.php
 msgid "Print or Email Contribution Receipts"
@@ -2292,7 +2292,7 @@ msgstr "Ime za ovaj tip kreditne kartice kako će biti dostavljeno vašem proces
 msgid ""
 "The name for this credit card type as it is displayed to contributors. This "
 "may be the same value as the Name above, or a localised title."
-msgstr ""
+msgstr "Ime za ovaj tip kreditne kartice kao što će biti prikazan donatorima. Može biti ista vrednost kao u imenu iznad ili neka druga odrednica."
 
 #: templates/CRM/Contribute/Form/AdditionalInfo/AdditionalDetail.tpl
 msgid "Non-deductible portion of this contribution."
@@ -2482,14 +2482,14 @@ msgstr ""
 
 #: templates/CRM/Contribute/Form/Contribution/Confirm.tpl
 msgid "I want to contribute this amount every %1."
-msgstr ""
+msgstr "Želim da doniram sledeći iznos svakog/e %1."
 
 #: templates/CRM/Contribute/Form/Contribution/Confirm.tpl
 msgid ""
 "Your initial contribution will be processed once you complete the "
 "confirmation step. You will be able to cancel the recurring contribution by "
 "visiting the web page link that will be included in your receipt."
-msgstr ""
+msgstr "Vaša donacija će biti obrađena čim završite sa sledećim korakom potvrde. Bićete u mogućnosti da otkažete periodičnu donaciju tako što ćete posetiti link ka veb stranici koji će biti uključen u emailu sa vašom priznanicom."
 
 #: templates/CRM/Contribute/Form/Contribution/Confirm.tpl
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
@@ -2499,7 +2499,7 @@ msgstr "Obavezujem se da ću donirati ovaj iznos svakog/svake %1 %2s u %3 rata."
 #: templates/CRM/Contribute/Form/Contribution/Confirm.tpl
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
 msgid "I pledge to contribute this amount every %2 for %3 installments."
-msgstr ""
+msgstr "Obavezujem se da ću donirati ovaj iznos svakog/svake %2 u %3 rata."
 
 #: templates/CRM/Contribute/Form/Contribution/Confirm.tpl
 msgid ""
@@ -2533,7 +2533,7 @@ msgid ""
 "Your account data will be used to charge your bank account via direct debit."
 " While submitting this form you agree to the charging of your bank account "
 "via direct debit."
-msgstr ""
+msgstr "Podaci u vašem nalogu će se koristiti za naplatu sa vašeg računa u banci putem direktnog debita. Slanjem ovog formulara slažete se sa naplatom sa vašeg računa u banci putem direktnog debita."
 
 #: templates/CRM/Contribute/Form/Contribution/Confirm.tpl
 msgid ""
@@ -2578,7 +2578,7 @@ msgid ""
 "You can specify the number of installments, or you can leave the number of "
 "installments blank if you want to make an open-ended commitment. In either "
 "case, you can choose to cancel at any time."
-msgstr ""
+msgstr "Možete odrediti broj rata, ili ostaviti polje prazno ukoliko želite da se obavežete na periodično doniranje bez krajnjeg roka. U svakom slučaju, možete otkazati periodičnu donaciju kada god želite."
 
 #: templates/CRM/Contribute/Form/Contribution/Main.tpl
 msgid "You will receive an email receipt for each recurring contribution."
@@ -2715,13 +2715,13 @@ msgstr ""
 
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
 msgid "This membership will be renewed automatically every %1."
-msgstr ""
+msgstr "Članstvo se automatski obnavlja svakog/e %1."
 
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
 msgid ""
 "You will receive an email receipt which includes information about how to "
 "cancel the auto-renewal option."
-msgstr ""
+msgstr "Dobićete email priznanicu sa informacijama o tome kako da otkažete automatsko obnavljanje."
 
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
 msgid ""
@@ -2742,7 +2742,7 @@ msgstr ""
 
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
 msgid "This recurring contribution will be automatically processed every %1."
-msgstr ""
+msgstr "Ova periodična donacija će biti obrađena automatski svakog/e %1."
 
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
 msgid ""
@@ -2928,7 +2928,7 @@ msgstr "Da li ste sigurni da želite da obrišete ovu nagradu sa ove stranice?"
 msgid ""
 "Pick a premium to include on this Contribution Page. Use <a href='%1'>Manage"
 " Premiums</a> to create or enable additional premium choices for your site."
-msgstr ""
+msgstr "Izaberite nagradu koja će biti prikazana na ovoj stranici za doniranje. Koristite <a href='%1'>Menadžment nagrada</a> da napravite ili uključite dodatne opcije za nagrade na vašem sajtu."
 
 #: templates/CRM/Contribute/Form/ContributionPage/AddProduct.tpl
 #: templates/CRM/Contribute/Form/ManagePremiums.tpl
@@ -3025,7 +3025,7 @@ msgstr ""
 
 #: templates/CRM/Contribute/Form/ContributionPage/Amount.tpl
 msgid "Select recurring units supported for recurring payments."
-msgstr ""
+msgstr "Izaberite koje periodične jedinice su podržane za periodične donacije/uplate."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Amount.tpl
 msgid "Can users also set an interval (e.g. every '3' months)?"
@@ -3035,7 +3035,7 @@ msgstr "Da li korisnici mogu da podese interval (npr. svaka '3' meseca)?"
 msgid ""
 "Give the user a choice of installments (e.g. donate every month for 6 "
 "months)? If not, recurring donations will continue indefinitely."
-msgstr ""
+msgstr "Dajete li korisniku izbor rata (npr. doniraj svakog meseca, 6 meseci)? Ukoliko ne, periodične donacije će se nastaviti dok ih korisnik ne otkaže."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Amount.tpl
 msgid ""
@@ -3058,7 +3058,7 @@ msgid ""
 "Check this box if you want to give users the option to enter their own "
 "contribution amount. Your page will then include a text field labeled "
 "<strong>Other Amount</strong>."
-msgstr ""
+msgstr "Štiklirajte ovu kućicu ukoliko želite da korisnicima date opciju da sami unesu iznos donacije. Vaša stranica će imati tekstualno polje obeleženo <strong>Drugi iznos</strong>."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Amount.tpl
 msgid ""
@@ -3132,7 +3132,7 @@ msgid ""
 "Create a new profile by clicking the 'Create' button next to 'Include "
 "Profile' field below. Name your new profile (e.g. 'Contribution "
 "Information')."
-msgstr ""
+msgstr "Napravite novi profil tako što ćete kliknuti na 'Kreiraj' dugme odmah pored 'Uključi profil' polje ispod. Imenujte svoj novi profil (npr. 'Informacije o donaciji')."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Custom.hlp
 msgid ""
@@ -3188,7 +3188,7 @@ msgid ""
 "When Personal Campaign Pages are enabled, constituents will see a link "
 "inviting them to create their own fundraising page after making a "
 "contribution."
-msgstr ""
+msgstr "Kada su stranice lične kampanje uključene, donatori i posetioci će videti link sa pozivom da kreiraju svoju stranicu za doniranje nakon doniranja."
 
 #: templates/CRM/Contribute/Form/ContributionPage/PCP.hlp
 msgid ""
@@ -3209,7 +3209,7 @@ msgid ""
 "able to select from a number of exciting thank-you gifts...). You can "
 "optionally provide a contact email address and/or phone number for "
 "inquiries."
-msgstr ""
+msgstr "Uredite <strong>Podešavanja nagrada</strong> da podesite naslov i uvodnu poruku (npr...u znak zahvalnosti za vašu podršku, možete izabrati jedan od mnogih poklona). Možete ostaviti i email adresu i/ili telefonski broj za dodatne informacije."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Premium.tpl
 msgid ""
@@ -3397,13 +3397,13 @@ msgid ""
 "Use this form to edit the page title, financial type (e.g. donation, "
 "campaign contribution, etc.), goal amount, introduction, and status "
 "(active/inactive) for this online contribution page."
-msgstr ""
+msgstr "Koristite ovaj formular da uredite naslov stranice, finansijski tip (npr. donacija, donacija kampanji, itd.), ciljani iznos, uvod i status (aktivan/neaktivan) za ovu stranicu za onlajn donacije."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Settings.tpl
 msgid ""
 "This title will be displayed at the top of the page.<br />Please use only "
 "alphanumeric, spaces, hyphens and dashes for Title."
-msgstr ""
+msgstr "Naslov će biti prikazan u vrhu strane.<br />Korisitite samo alfanumeričke karaktere, razmake i crtice za kreiranje imena događaja."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Settings.tpl
 msgid ""
@@ -3417,7 +3417,7 @@ msgid ""
 "to allow individuals to contribute on behalf of an organization. Valid "
 "profiles include Contact and / or Organization fields, and may include "
 "Contribution and Membership fields."
-msgstr ""
+msgstr "Morate <a href=\"%1\">podesiti važeći profil organizacije</a> kako biste dozvolili pojedincima da doniraju u ime organizacije. Važeći profil uključuje polje za kontakt i / ili organizaciju, i može imati i polja za donaciju i članstvo."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Settings.tpl
 msgid ""
