--- a/po/nl_NL/admin.po
+++ b/po/nl_NL/admin.po
@@ -4,6 +4,7 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Betty Dolfing <betty.dolfing@civicoop.org>, 2016
+# Geert Buyse <geert.buyse@chiro.be>, 2017
 # HanV <han.velthuis@home.nl>, 2013-2016
 # HanV <han.velthuis@home.nl>, 2012
 # HanV <han.velthuis@home.nl>, 2011-2012
@@ -15,8 +16,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-12-25 12:59+0000\n"
-"Last-Translator: Herman Peeren <herman@yepr.nl>\n"
+"PO-Revision-Date: 2017-02-09 09:05+0000\n"
+"Last-Translator: Geert Buyse <geert.buyse@chiro.be>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -4283,7 +4284,7 @@ msgstr "Gereserveerde kenmerken kunnen niet verwijderd worden. Gebruikers met he
 
 #: templates/CRM/Admin/Form/Tag.tpl
 msgid "Defines if you can select this tag."
-msgstr "Bepaald of u dit kenmerk kan selecteren."
+msgstr "Bepaalt of u dit kenmerk kan selecteren."
 
 #: templates/CRM/Admin/Form/Tag.tpl
 msgid "Are you sure you want to delete <b>%1</b> Tag?"
