po: update po/it_IT/event.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/it_IT/event.po
+++ b/po/it_IT/event.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-08 15:53+0000\n"
+"PO-Revision-Date: 2017-02-09 11:24+0000\n"
 "Last-Translator: Angela Iussig <angela.iussig@gmail.com>\n"
 "Language-Team: Italian (http://www.transifex.com/civicrm/civicrm/language/it/)\n"
 "MIME-Version: 1.0\n"
@@ -2779,7 +2779,7 @@ msgid ""
 "Fill in your registration information on this page. If you are registering "
 "additional people, you will be able to enter their registration information "
 "after you complete this page and click &quot;Continue&quot;."
-msgstr "Compila le informazioni di registrazione in questa pagina. Se stai registrando ulteriori persone, potrai inserire le loro informazioni solo dopo aver inserito tutte le informazioni richieste in questa pagina e dopo aver cliccato su \"Continua\"."
+msgstr "Ti chiediamo di compilare le informazioni in questa pagina. Se stai iscrivendo più persone, potrai inserire i loro dati solo dopo aver completato questa schermata e cliccando su “Continua”."
 
 #: templates/CRM/Event/Form/Registration/ThankYou.tpl
 #: xml/templates/message_templates/event_offline_receipt_html.tpl
