--- a/po/id_ID/common-base.po
+++ b/po/id_ID/common-base.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-31 07:05+0000\n"
+"PO-Revision-Date: 2017-02-10 04:18+0000\n"
 "Last-Translator: Justin Snyder <jsnyder83@gmail.com>\n"
 "Language-Team: Indonesian (http://www.transifex.com/civicrm/civicrm/language/id/)\n"
 "MIME-Version: 1.0\n"
@@ -2402,11 +2402,11 @@ msgstr "Tidak ada Email Massal (Pengguna Keluar)"
 
 #: CRM/Contact/DAO/Contact.php
 msgid "Legal Identifier"
-msgstr "Indentifikasi Sah"
+msgstr "Identifikasi Legal"
 
 #: CRM/Contact/DAO/Contact.php
 msgid "External Identifier"
-msgstr "Indentifikasi Eksternal"
+msgstr "Identifikasi Eksternal"
 
 #: CRM/Contact/DAO/Contact.php
 msgid "Sort Name"
@@ -3698,7 +3698,7 @@ msgstr "Email Kontak"
 
 #: CRM/Contact/Form/Search/Criteria.php templates/CRM/Contact/Form/Contact.hlp
 msgid "Contact Source"
-msgstr "Kontak Sumber"
+msgstr "Sumber Kontak"
 
 #: CRM/Contact/Form/Search/Criteria.php
 msgid "Please enter valid Contact ID"
@@ -11031,7 +11031,7 @@ msgstr "benar"
 
 #: CRM/Logging/ReportDetail.php xml/templates/civicrm_data.tpl
 msgid "Home"
-msgstr "Pangkal"
+msgstr "Rumah"
 
 #: CRM/Logging/ReportDetail.php
 msgid "Search Results"
