po: update po/sr_RS@latin/common-components.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/common-components.po
+++ b/po/sr_RS@latin/common-components.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-06 11:05+0000\n"
+"PO-Revision-Date: 2017-02-09 07:29+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -1252,7 +1252,7 @@ msgid ""
 "below without setting up a payment processor. All users will then be asked "
 "to submit payment offline (e.g. mail in a check, call in a credit card, "
 "etc.)."
-msgstr ""
+msgstr "Beleška: Kao alternativu, možete aktivirati opciju <strong>Plati kasnije</strong> bez podešavanja procesora uplate. Od svih korisnika će zatim biti zatraženo da izvrše uplatu offline (npr.  čekom, kreditnom karticom itd)."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Amount.tpl
 #: templates/CRM/Event/Form/ManageEvent/Fee.tpl
@@ -1266,7 +1266,7 @@ msgstr "Štiklirajte ovu kućicu ukoliko želite da date korisnicima opciju da i
 msgid ""
 "Text displayed next to the checkbox for the 'pay later' option on the "
 "contribution form. You may include HTML formatting tags."
-msgstr ""
+msgstr "Tekst koji će biti prikazan pored kućice za 'plati kasnije' opciju na formularu za donaciju. Možete uključiti tagove za HTML format."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Amount.tpl
 #: templates/CRM/Event/Form/ManageEvent/Fee.tpl
@@ -1282,7 +1282,7 @@ msgid ""
 "Once you switch to using a Price Set, you won't be able to switch back to "
 "your existing settings below except by re-entering them. Are you sure you "
 "want to switch to a Price Set?"
-msgstr ""
+msgstr "Ukoliko počnete da koristite set cena, nećete moći da se vratite na već postojeća podešavanja osim ukoliko ih ne unesete ponovo. Da li ste sigurni da želite da koristite set cena?"
 
 #: templates/CRM/Contribute/Form/ContributionPage/Custom.hlp
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
