--- a/po/id_ID/menu.po
+++ b/po/id_ID/menu.po
@@ -5,14 +5,15 @@
 # Translators:
 # Dwi Laksono Abdullah <id.dwilaksana@gmail.com>, 2015
 # Fery Setiawan <gembelweb@gmail.com>, 2015
-# Justin Paul Snyder <jsnyder83@gmail.com>, 2014
+# Justin Snyder <jsnyder83@gmail.com>, 2014
+# Justin Snyder <jsnyder83@gmail.com>, 2017
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-02-10 03:58+0000\n"
+"Last-Translator: Justin Snyder <jsnyder83@gmail.com>\n"
 "Language-Team: Indonesian (http://www.transifex.com/civicrm/civicrm/language/id/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1354,7 +1355,7 @@ msgstr "Semua Kasus"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Home"
-msgstr "Pangkal"
+msgstr "Rumah"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
