po: update po/sr_RS@latin/batch.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/batch.po
+++ b/po/sr_RS@latin/batch.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-06 11:42+0000\n"
+"PO-Revision-Date: 2017-02-09 07:24+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -131,7 +131,7 @@ msgstr "Unos podataka u grupu za uplate obaveza"
 
 #: CRM/Batch/Form/Entry.php
 msgid "Ignore Mismatch & Process the Batch?"
-msgstr ""
+msgstr "Ignoriši neslaganje i obradi grupu?"
 
 #: CRM/Batch/Form/Entry.php
 msgid "Validate & Process the Batch"
