po: update po/sr_RS@latin/common-components.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/common-components.po
+++ b/po/sr_RS@latin/common-components.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-09 07:29+0000\n"
+"PO-Revision-Date: 2017-02-10 11:28+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -1321,7 +1321,7 @@ msgid ""
 "The person who created the personal campaign page will be automatically "
 "notified via email when their page is approved so that they can begin "
 "promoting the campaign."
-msgstr ""
+msgstr "Osoba koja je kreirala stranicu lične kampanje će biti automatski obaveštena emailom kada se njihova stranica odobri tako da mogu odmah da počnu sa promocijom svoje kampanje."
 
 #: templates/CRM/Contribute/Form/ContributionPage/PCP.hlp
 #: templates/CRM/PCP/Form/Contribute.hlp
@@ -1423,7 +1423,7 @@ msgstr "Recite ljudima zašto vam je ova kampanja važna."
 msgid ""
 "Is your Personal Campaign Page active? You can activate/de-activate it any "
 "time during it's lifecycle."
-msgstr ""
+msgstr "Da li je vaša stranica lične kampanje aktivna? Možete je aktivirati/deaktivirati bilo kada."
 
 #: templates/CRM/Contribute/Form/PCP/Delete.tpl
 #: templates/CRM/PCP/Form/PCP/Delete.tpl
@@ -1606,7 +1606,7 @@ msgstr "Informacije ispod daju kratak pregled rezultata."
 msgid ""
 "You can <a href=\"%1\">Download Errors</a>. You may then correct them, and "
 "import the new file with the corrected data."
-msgstr ""
+msgstr "Možete <a href=\"%1\">Preuzeti greške</a>. Kada ih ispravite, importujte novi fajl sa ispravljenim podacima."
 
 #: templates/CRM/Contribute/Import/Form/Summary.tpl
 #: templates/CRM/Member/Import/Form/Summary.tpl
@@ -1614,7 +1614,7 @@ msgid ""
 "You can <a href=\"%1\">Download Conflicts</a>. You may then review these "
 "records to determine if they are actually conflicts, and correct the "
 "transaction IDs for those that are not."
-msgstr ""
+msgstr "Možete <a href=\"%1\">Preuzeti konflikte</a>. Možete pregledati ove zapise da utvrdite da li su zapravo konflikti, i ispravite ID transakcija za one koji nisu."
 
 #: templates/CRM/Contribute/Import/Form/Summary.tpl
 #: templates/CRM/Member/Import/Form/Summary.tpl
@@ -1622,7 +1622,7 @@ msgid ""
 "You can <a href=\"%1\">Download Duplicates</a>. You may then review these "
 "records to determine if they are actually duplicates, and correct the "
 "transaction IDs for those that are not."
-msgstr ""
+msgstr "Možete <a href=\"%1\">Preuzeti duplikate</a>. Možete pregledati ove zapise da utvrdite da li su zapravo duplikati, i ispravite ID transakcija za one koji nisu."
 
 #: templates/CRM/Contribute/Import/Form/Summary.tpl
 #: CRM/Report/Form/Contribute/Detail.php
