po: update po/it_IT/event.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/it_IT/event.po
+++ b/po/it_IT/event.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-09 11:24+0000\n"
+"PO-Revision-Date: 2017-02-10 10:53+0000\n"
 "Last-Translator: Angela Iussig <angela.iussig@gmail.com>\n"
 "Language-Team: Italian (http://www.transifex.com/civicrm/civicrm/language/it/)\n"
 "MIME-Version: 1.0\n"
@@ -76,7 +76,7 @@ msgstr "Al momento ci sono %2 persone sulla lista d'attesa per questo evento. Pu
 
 #: CRM/Event/BAO/Query.php
 msgid "Include Repeating Events"
-msgstr ""
+msgstr "Includi Eventi ricorrenti"
 
 #: CRM/Event/BAO/Query.php
 msgid "Participant is a Test"
@@ -271,11 +271,11 @@ msgstr "BCC Conferma"
 
 #: CRM/Event/DAO/Event.php
 msgid "Default Fee ID"
-msgstr ""
+msgstr "ID quota predefinito"
 
 #: CRM/Event/DAO/Event.php
 msgid "Default Discount Fee ID"
-msgstr ""
+msgstr "ID quota scontata predefinito"
 
 #: CRM/Event/DAO/Event.php
 msgid "ThankYou Title"
@@ -379,7 +379,7 @@ msgstr "Registrato Da ID"
 
 #: CRM/Event/DAO/Participant.php
 msgid "Discount Amount"
-msgstr ""
+msgstr "Importo sconto"
 
 #: CRM/Event/DAO/Participant.php
 msgid "Event Cart ID"
@@ -588,7 +588,7 @@ msgstr "Almeno una quota deve essere registrati per l'Insieme Sconto Set. Se non
 
 #: CRM/Event/Form/ManageEvent/Fee.php
 msgid "Please select financial type."
-msgstr ""
+msgstr "Prego selezionare tipofinanziario"
 
 #: CRM/Event/Form/ManageEvent/Fee.php
 msgid "Please enter the fee label for the paid event."
@@ -3932,7 +3932,7 @@ msgstr "Grazie per la tua iscrizione."
 msgid ""
 "This letter is a confirmation that your registration has been received and "
 "your status has been updated to <strong> %1</strong>."
-msgstr "Questa email è la conferma dell'avvenuta iscrizione e il tuo status è stato impostato come  <strong> %1</strong>."
+msgstr "Questa è l'email di conferma che la tua iscrizione è stata ricevuta e il tuo status è stato impostato come <strong> %1</strong>."
 
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 msgid ""
@@ -3944,7 +3944,7 @@ msgstr "Questa email è la conferma dell'avvenuta iscrizione e il tuo status è 
 msgid ""
 "This letter is a confirmation that your registration has been received and "
 "your status has been updated to <strong>registered<strong>."
-msgstr "Questa email è la conferma dell'avvenuta iscrizione e il tuo status è stato impostato come  <strong> registered</strong>."
+msgstr "Questa è l'email di conferma che la tua iscrizione è stata ricevuta e sei ufficialmente <strong>registered<strong>."
 
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 #: xml/templates/message_templates/event_online_receipt_text.tpl
