po: update po/sr_RS@latin/mailing.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/mailing.po
+++ b/po/sr_RS@latin/mailing.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-06 13:58+0000\n"
+"PO-Revision-Date: 2017-02-10 11:20+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -78,7 +78,7 @@ msgstr "Vaše pismo"
 msgid ""
 "The <a href=\"%1\">default mailbox</a> has not been configured. You will "
 "find <a href=\"%2\">more info in the online user and administrator guide</a>"
-msgstr ""
+msgstr "Nemate podešeni <a href=\"%1\">podrazumevani mailbox</a>. Naći ćete više informacija u našem <a href=\"%2\">onlajn vodiču za korisnike i administratore.</a>"
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "View Mailing"
@@ -544,7 +544,7 @@ msgstr "Odobri/Odbij mailing"
 
 #: CRM/Mailing/Form/Approve.php
 msgid "Approve/Reject Note"
-msgstr ""
+msgstr "Odobri/Odbij beleška"
 
 #: CRM/Mailing/Form/Component.php
 msgid "Component Type"
@@ -614,7 +614,7 @@ msgid ""
 "The <a href=\"%1\">default mailbox</a> has not been configured. You will "
 "find <a href=\"%2\">more info in our online user and administrator "
 "guide.</a>"
-msgstr ""
+msgstr "Nemate podešeni <a href=\"%1\">podrazumevani mailbox</a>. Naći ćete više informacija u našem <a href=\"%2\">onlajn vodiču za korisnike i administratore.</a>"
 
 #: CRM/Mailing/Form/Group.php
 msgid "Name Your Mailing"
@@ -671,7 +671,7 @@ msgstr "Morate izabrati pretragu za filtriranje"
 msgid ""
 "If 'Email Selection Method' is automatic, you are not allowed to choose any "
 "'Location Type'"
-msgstr ""
+msgstr "Ukoliko je 'Metod selekcije emaila' automatski, neće vam biti dozvoljeno da izaberete 'Tip lokacije'"
 
 #: CRM/Mailing/Form/Group.php
 msgid ""
@@ -800,7 +800,7 @@ msgstr "Pošalji test mailing"
 
 #: CRM/Mailing/Form/Test.php
 msgid "Inform Scheduler"
-msgstr ""
+msgstr "Informiši zakazivača"
 
 #: CRM/Mailing/Form/Test.php
 msgid "You did not provide an email address or select a group."
@@ -1157,7 +1157,7 @@ msgstr "Pretraga CiviCRM mailing-a"
 
 #: ang/crmMailing/BlockApprove.html
 msgid "Unreviewed"
-msgstr ""
+msgstr "Nerevidirano"
 
 #: ang/crmMailing/BlockMailing.html ang/crmMailingAB/BlockMailing.html
 msgid "Save As"
@@ -1592,7 +1592,7 @@ msgid ""
 "A/B testing allows you to send two test mailings to a random subset of your "
 "recipients. After collecting and comparing metrics, the more successful "
 "mailing will be sent to the remaining recipients."
-msgstr ""
+msgstr "A/B testiranje dozvoljava da pošaljete dva test mailinga nasumično izabranom podsetu vaših primaoca. Nakon što se potrebne metrike prikupe i uporede, mailing koji je bio uspešniji biće poslat ostalim primaocima."
 
 #: ang/crmMailingAB/BlockSetup.html ang/crmMailingAB/ListCtrl.html
 msgid "Test Type"
@@ -1711,11 +1711,11 @@ msgstr "Izveštaji za '%1'"
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "Opens (WIP)"
-msgstr ""
+msgstr "Otvaranja (WIP)"
 
 #: ang/crmMailingAB/EditCtrl/report.html
 msgid "Total Clicks (WIP)"
-msgstr ""
+msgstr "Ukupno klikova (WIP)"
 
 #: ang/crmMailingAB/EditCtrl.js
 msgid "Test A (%1)"
@@ -2589,7 +2589,7 @@ msgstr ""
 
 #: CRM/Mailing/Event/DAO/TrackableURLOpen.php
 msgid "Trackable Url"
-msgstr ""
+msgstr "Ispraćeni URL"
 
 #: CRM/Mailing/Form/Component.php
 msgid "Please provide either HTML or TEXT format for the Body."
