--- a/po/pl_PL/admin.po
+++ b/po/pl_PL/admin.po
@@ -10,7 +10,7 @@
 # kalor <karol.krzyczkowski@gmail.com>, 2014-2015
 # Marcin Lewandowski <email.marcina.lewandowskiego@gmail.com>, 2016
 # Mateusz Sikora <magu.bba@gmail.com>, 2015
-# Michael Smitch <thenurrr23@gmail.com>, 2016
+# Michael Smitch <thenurrr23@gmail.com>, 2016-2017
 # Michał Mach <michau@gmail.com>, 2014
 # Piotr Kaczyński <www@skrzydla.lublin.pl>, 2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -19,8 +19,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:43+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-02-11 15:48+0000\n"
+"Last-Translator: Michael Smitch <thenurrr23@gmail.com>\n"
 "Language-Team: Polish (http://www.transifex.com/civicrm/civicrm/language/pl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -94,7 +94,7 @@ msgstr "Włączyć \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Disable \"%1\"?"
-msgstr ""
+msgstr "Wyłączyć \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Extension Uninstalled"
