--- a/po/nl_NL/common-base.po
+++ b/po/nl_NL/common-base.po
@@ -22,7 +22,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-08 13:56+0000\n"
+"PO-Revision-Date: 2017-02-12 20:38+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -15237,7 +15237,7 @@ msgid ""
 "Training activity recorded for them. In this case use the AND operator. If "
 "you need to find everyone who is in the Volunteers group OR has a Volunteer "
 "Training activity recorded, use the OR operator."
-msgstr "Bepaald of uw criteria worden samengevoegd met een AND operator , of  samengevoegd met een OR operator. Als u alle personen wilt vinden in een groep vrijwilligers die OOK een activiteit voor een training voor vrijwilligers hebben, dan gebruikt u de AND. Als u alle mensen wilt vinden die vrijwilliger zijn OF een training activiteit voor vrijwilliger hebben dan gebruikt u de OR."
+msgstr "Bepaalt of uw criteria worden samengevoegd met een AND operator , of  samengevoegd met een OR operator. Als u alle personen wilt vinden in een groep vrijwilligers die OOK een activiteit voor een training voor vrijwilligers hebben, dan gebruikt u de AND. Als u alle mensen wilt vinden die vrijwilliger zijn OF een training activiteit voor vrijwilliger hebben dan gebruikt u de OR."
 
 #: templates/CRM/Contact/Form/Search/Advanced.hlp
 msgid "Target Contact Group"
