--- a/po/nl_NL/mailing.po
+++ b/po/nl_NL/mailing.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-09 14:38+0000\n"
+"PO-Revision-Date: 2017-02-12 20:35+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -2316,7 +2316,7 @@ msgid ""
 "This option controls who can view the contents of this email on your "
 "website. The link can be included by inserting the \"Mailing permalink\" "
 "token (place it in a link when composing in HTML mode)."
-msgstr "Deze optie bepaald wie de inhoud van de e-mail kan lezen op uw website. De link kan worden toegevoegd met het token \"Permalink mailing\"  (plaats het in een link bij het aanmaken van de code in HTML)."
+msgstr "Deze optie bepaalt wie de inhoud van de e-mail kan lezen op uw website. De link kan worden toegevoegd met het token \"Permalink mailing\"  (plaats het in een link bij het aanmaken van de code in HTML)."
 
 #: templates/CRM/Mailing/MailingUI.hlp
 msgid "The options for mailing visibility are:"
