--- a/po/fr_CA/event.po
+++ b/po/fr_CA/event.po
@@ -18,7 +18,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-01 20:40+0000\n"
+"PO-Revision-Date: 2017-02-12 15:58+0000\n"
 "Last-Translator: Mathieu B <mathieu@brab.ca>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -843,7 +843,7 @@ msgstr "Supprimer seulement cette inscription de participant."
 
 #: CRM/Event/Form/Participant.php
 msgid "Send Notification"
-msgstr "Notification d'envoi"
+msgstr "Envoyer une notification"
 
 #: CRM/Event/Form/Participant.php templates/CRM/Event/Form/ParticipantView.tpl
 msgid "Event Source"
