po: update po/ca_ES/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/common-base.po
+++ b/po/ca_ES/common-base.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-19 17:39+0000\n"
+"PO-Revision-Date: 2017-02-13 09:54+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -15146,7 +15146,7 @@ msgstr "- primer seleccioneu un tipus de relació -"
 
 #: templates/CRM/Contact/Form/Relationship.tpl
 msgid "Are you sure you want to delete this Relationship?"
-msgstr "Esteu segurs que voleu eliminar aquesta relació?"
+msgstr "Esteu segur que voleu eliminar aquesta relació?"
 
 #: templates/CRM/Contact/Form/Search/Advanced.hlp
 #: templates/CRM/Contact/Form/Search/ResultTasks.tpl
@@ -18444,7 +18444,7 @@ msgid ""
 "Deleting this group will NOT delete the member contact records. However, all"
 " contact subscription information and history for this group will be "
 "deleted."
-msgstr "Si esborra aquest grup no esborrarà els registres de contactes membres. No obstant això, s'esborraran totes les dades de subscripció de contactes i la història d'aquest grup"
+msgstr "Si elimineu aquest grup no eliminareu els registres de pertinences dels contactes. No obstant això, s'eliminarà tota la informació de subscripció i la història d'aquest grup."
 
 #: templates/CRM/Group/Form/Delete.tpl
 msgid "If this group is used in CiviCRM profiles, those fields will be reset."
@@ -20406,7 +20406,7 @@ msgstr "Actualitza ara"
 
 #: templates/CRM/common/success.tpl
 msgid "Are you sure you are ready to upgrade now?"
-msgstr "¿Esteu segurs que esteu preparats per actualitzar ara?"
+msgstr "¿Esteu segur que esteu preparats per actualitzar ara?"
 
 #: templates/CRM/common/success.tpl
 msgid ""
