--- a/po/ca_ES/grant.po
+++ b/po/ca_ES/grant.po
@@ -4,15 +4,15 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Estefanía Mediavilla <e.mediavilla@ixiam.com>, 2013
-# francescbassas <francesc@babu.cat>, 2014
+# francescbassas <francesc@babu.cat>, 2014,2017
 # francescbassas <francesc@babu.cat>, 2013
 # francescbassas <francesc@babu.cat>, 2012-2013
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:09+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2017-02-13 09:51+0000\n"
+"Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
