po: update po/ca_ES/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/admin.po
+++ b/po/ca_ES/admin.po
@@ -6,7 +6,7 @@
 # Andreu Lligadas <a.lligadas@gmail.com>, 2016
 # Calbasi <joan@calbasi.net>, 2013
 # Estefanía Mediavilla <e.mediavilla@ixiam.com>, 2014
-# francescbassas <francesc@babu.cat>, 2013-2016
+# francescbassas <francesc@babu.cat>, 2013-2017
 # francescbassas <francesc@babu.cat>, 2013
 # ixiam <info@ixiam.com>, 2016
 # Marti Prat <m.prat@ixiam.com>, 2014
@@ -16,7 +16,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-29 23:01+0000\n"
+"PO-Revision-Date: 2017-02-13 09:52+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -1762,7 +1762,7 @@ msgstr "esteu segur que voleu desactivar aquest tipus de membres?"
 
 #: CRM/Admin/Page/AJAX.php
 msgid "Are you sure you want to disable this membership status rule?"
-msgstr "Esteu segurs que voleu desactivar aquesta regla d'estat de membre?"
+msgstr "Esteu segur que voleu desactivar aquesta regla d'estat de membre?"
 
 #: CRM/Admin/Page/AJAX.php
 msgid "Are you sure you want to disable this price field?"
