--- a/po/ca_ES/campaign.po
+++ b/po/ca_ES/campaign.po
@@ -4,14 +4,14 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Estefanía Mediavilla <e.mediavilla@ixiam.com>, 2014
-# francescbassas <francesc@babu.cat>, 2014-2016
+# francescbassas <francesc@babu.cat>, 2014-2017
 # ixiam <info@ixiam.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-21 12:33+0000\n"
-"Last-Translator: ixiam <info@ixiam.com>\n"
+"PO-Revision-Date: 2017-02-13 09:51+0000\n"
+"Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
