--- a/po/sr_RS@latin/common-base.po
+++ b/po/sr_RS@latin/common-base.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-08 15:37+0000\n"
+"PO-Revision-Date: 2017-02-13 14:21+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -21010,7 +21010,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Financial Item Status"
-msgstr ""
+msgstr "Finansijski dokument status"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Name Badge Format"
