--- a/po/sr_RS@latin/financial.po
+++ b/po/sr_RS@latin/financial.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-06 12:28+0000\n"
+"PO-Revision-Date: 2017-02-13 14:21+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -1028,31 +1028,31 @@ msgstr ""
 
 #: CRM/Financial/DAO/FinancialItem.php
 msgid "Financial Item ID"
-msgstr ""
+msgstr "ID finansijskog dokumenta"
 
 #: CRM/Financial/DAO/FinancialItem.php
 msgid "Financial Item Created Date"
-msgstr ""
+msgstr "Finansijski dokument kreiran datuma"
 
 #: CRM/Financial/DAO/FinancialItem.php
 msgid "Financial Item Transaction Date"
-msgstr ""
+msgstr "Finansijski dokument datum transakcije"
 
 #: CRM/Financial/DAO/FinancialItem.php
 msgid "Financial Item Contact ID"
-msgstr ""
+msgstr "Finansijski dokument ID kontakta"
 
 #: CRM/Financial/DAO/FinancialItem.php
 msgid "Financial Item Description"
-msgstr ""
+msgstr "Finansijski dokument opis"
 
 #: CRM/Financial/DAO/FinancialItem.php
 msgid "Financial Item Currency"
-msgstr ""
+msgstr "Finansijski dokument valuta"
 
 #: CRM/Financial/DAO/FinancialItem.php
 msgid "Financial Item Status ID"
-msgstr ""
+msgstr "Finansijski dokument ID statusa"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Is Payment?"
